--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "next": "^13.5.3",
     "react": "latest",
     "react-dom": "latest",
-    "sharp": "^0.33.1"
+    "sharp": "^0.33.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "eslint": "latest",
     "eslint-config-next": "latest"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "author": "",
+  "license": "ISC"
 }
